# GameOfLifeSdl2

./: CMakeLists.txt  README.md  button.c  button.h  colors.h  inputTextBox.h  main.c  menuButton.h  textBox.h
